--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,14 @@
   width: 0;
 }
 
+pre {
+  white-space: pre-wrap; /* Since CSS 2.1 */
+  white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
+  white-space: -pre-wrap; /* Opera 4-6 */
+  white-space: -o-pre-wrap; /* Opera 7 */
+  word-wrap: break-word; /* Internet Explorer 5.5+ */
+}
+
 @layer components {
   .message {
     @apply flex items-end mb-0.5 text-xs sm:text-base;
